--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
   <body>
 
-    <div id="screen">$&gt;<input id="input"></input></div>
+    <div id="screen">$&gt;<input type="text" id="input"></input></div>
+    <ul id="myUL"></ul>
 
     <script>
 
@@ -49,6 +50,7 @@
             }
         }
     });
+  }
     </script>
 </div>
 
