--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
 
-    <div id="screen">$&gt;<input></input>
+    <div id="screen">Welcome to Terminal Mystery. A command line mystery game created by Gavin Wainwright (i am toast)
+      <br>$&gt;<input></input>
     <div id="output"></div>
     </div>
 
@@ -38,17 +39,7 @@
             $this.val('');
         }
     });
-
-    $(function(){
-        $("#typed").typed({
-            stringsElement: $('#typed-strings')
-        });
-    });
     </script>
-    <div id="typed-strings">
-        <p>Typed.js is a <strong>jQuery</strong> plugin.</p>
-        <p>It <em>types</em> out sentences.</p>
-    </div>
-    <span id="typed"></span>
+
   </body>
 </html>
