--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 $out.append("Hello Galaxy.<br>");
             } else
             if(val === "help") {
-                $out.append("Hello Galaxy.<br>");
+                $out.append("Here's a list of commands:<br>help - Sends a list of commands");
             }
 
             else {
