--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   </head>
   <body>
 
-    <div id="screen">Welcome to Terminal Mystery. A command line mystery game created by Gavin Wainwright (i am toast)
+    <div id="screen">Welcome to Terminal Mystery.
+      <br>A command line mystery game created by Gavin Wainwright (i am toast)
+      <div id="output"></div>
       <br>$&gt;<input></input>
-    <div id="output"></div>
     </div>
 
     <script>
