--- a/index.html
+++ b/index.html
@@ -14,36 +14,11 @@
 
     <div id="screen">Welcome to Terminal Mystery.
       <br>A command line mystery game created by Gavin Wainwright (i am toast)
-      <div id="output"></div>
       <br>$&gt;<input></input>
+      <div id="output"></div>
     </div>
 
-    <script>
-    var $out = $("#output");
-    $("#screen input").focus();
-    $("#screen input").on('keydown', function(event) {
-        if(event.which === 13) { // Enter key pressed
-            var $this = $(this),
-                val = $this.val();
-            $this.focus().val('');
-            if(val === "") {
-              $out.append("<br>");
-            } else
-            if(val === "hello world") {
-                $out.append("Hello Galaxy.<br>");
-            } else
-            if(val === "help") {
-                $out.append("Here's a list of commands:<br>help - Sends a list of commands");
-            }
-
-            else {
-              $out.append("Command not found.<br>");
-            }
-
-            $this.val('');
-        }
-    });
-    </script>
+    <script src="terminal.js"></script>
 
   </body>
 </html>
