--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               setTimeout(function() { $out.append("."); }, 3000);
               setTimeout(function() { $out.append("."); }, 4000);
               setTimeout(function() { $out.append("."); }, 5000);
-            }
+            } else
             if(val === "help") {
                 $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>");
             }
