--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
               setTimeout(function() { $out.append("."); }, 2000);
               setTimeout(function() { $out.append("."); }, 3000);
               setTimeout(function() { $out.append("."); }, 4000);
-              setTimeout(function() { $out.append("."); }, 5000);
+              setTimeout(function() { $out.append(".<br>"); }, 5000);
+              setTimeout(function() { $out.append("Successfully breached the firewall.<br>"); }, 6250);
             } else
             if(val === "help") {
                 $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>");
