--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Terminal Mystery</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <meta name="author" content="Gavin Wainwright">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
