--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -28,7 +28,7 @@
             var $this = $(this),
                 val = $this.val();
             $this.focus().val('');
-            if(val === "") {
+            if(val === "$&gt;") {
               $out.append("<br>");
             } else
             if(val === "breach") {
