--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -29,7 +29,7 @@
                 val = $this.val();
             $this.focus().val('');
             if(val === "") {
-              $out.append("$&gt;");
+              //nothing
             } else
             if(val === "breach") {
               $out.append("$&gt; breach<br>");
