--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -36,6 +36,14 @@
             if(val === "clear") {
               $out.empty();
             } else
+             if(val === "inbox") {
+              $out.append("$&gt; inbox<br>");
+               $out.append("Your Inbox:<br>favor");
+            } else
+                           if(val === "show favor") {
+              $out.append("$&gt; show favor<br>");
+               $out.append("Viewing the content of favor<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on<br>a group of people who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>You're secretly known for your hacking skills, so get as much information on the group as you can.<br>Best of Luck,<br>Mike");
+            } else
             if(val === "breach") {
               $out.append("$&gt; breach<br>");
               $out.append("Breaching");
@@ -48,7 +56,7 @@
             } else
             if(val === "help") {
               $out.append("$&gt; help<br>");
-                $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>clear - Clears the terminal<br>inbox - Shows your inbox<br>");
+                $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>clear - Clears the terminal<br>inbox - Shows your inbox<br>show - Shows the contents of a file or message<br>");
             }
             else {
               $out.append(`$&gt; ${val}<br>`);
