--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -1,71 +1,86 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Terminal Mystery</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <meta name="author" content="Gavin Wainwright">
-  <meta name="description" content="description here">
-  <meta name="keywords" content="keywords,here">
-  <link rel="stylesheet" href="style.css" type="text/css">
-  <script src="typed.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  </head>
-  <body>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="author" content="Gavin Wainwright">
+    <meta name="description" content="description here">
+    <meta name="keywords" content="keywords,here">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="typed.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+</head>
+
+<body>
 
     <div id="screen">Welcome to Terminal Mystery.
-      <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>
-      <br>Original idea from Hacker's Quest
-      <br>Type 'help' for a list of commands
-      <div id="output"></div>
-       $&gt;<input></input>
+        <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>
+        <br>Original idea from Hacker's Quest
+        <br>Type 'help' for a list of commands
+        <div id="output"></div>
+        $&gt;
+        <input></input>
     </div>
 
     <script>
-    var $out = $("#output");
-    $("#screen input").focus();
-    $("#screen input").on('keydown', function(event) {
-        if(event.which === 13) { // Enter key pressed
-            var $this = $(this),
-                val = $this.val();
-            $this.focus().val('');
-            if(val === "") {
-              $out.append("$&gt;<br>");
-            } else
-            if(val === "clear") {
-              $out.empty();
-            } else
-             if(val === "inbox") {
-              $out.append("$&gt; inbox<br>");
-               $out.append("Your Inbox:<br>favor");
-            } else
-                           if(val === "show favor") {
-              $out.append("$&gt; show favor<br>");
-               $out.append("Viewing the content of favor<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br><br>P.S. You can gain access to one of their computers by connecting with the host:<br>root@mask<br>and the password:<br>m4sk<br>");
-            } else
-            if(val === "breach") {
-              $out.append("$&gt; breach<br>");
-              $out.append("Breaching");
-              setTimeout(function() { $out.append("."); }, 1000);
-              setTimeout(function() { $out.append("."); }, 2000);
-              setTimeout(function() { $out.append("."); }, 3000);
-              setTimeout(function() { $out.append("."); }, 4000);
-              setTimeout(function() { $out.append(".<br>"); }, 5000);
-              setTimeout(function() { $out.append("Successfully breached the firewall.<br>"); }, 6250);
-            } else
-            if(val === "help") {
-              $out.append("$&gt; help<br>");
-                $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>clear - Clears the terminal<br>inbox - Shows your inbox<br>show - Shows the contents of a file or message<br>");
+        var $out = $("#output");
+        $("#screen input").focus();
+        $("#screen input").on('keydown', function(event) {
+            if (event.which === 13) { // Enter key pressed
+                var $this = $(this),
+                    val = $this.val();
+                $this.focus().val('');
+                if (val === "") {
+                    $out.append("$&gt;<br>");
+                } else
+                if (val === "clear") {
+                    $out.empty();
+                } else
+                if (val === "inbox") {
+                    $out.append("$&gt; inbox<br>");
+                    $out.append("Your Inbox:<br>favor");
+                } else
+                if (val === "show favor") {
+                    $out.append("$&gt; show favor<br>");
+                    $out.append("Viewing the content of favor<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br><br>P.S. You can gain access to one of their computers by connecting with the host:<br>root@mask<br>and the password:<br>m4sk<br>");
+                } else
+                if (val === "breach") {
+                    $out.append("$&gt; breach<br>");
+                    $out.append("Breaching");
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 1000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 2000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 3000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 4000);
+                    setTimeout(function() {
+                        $out.append(".<br>");
+                    }, 5000);
+                    setTimeout(function() {
+                        $out.append("Successfully breached the firewall.<br>");
+                    }, 6250);
+                } else
+                if (val === "help") {
+                    $out.append("$&gt; help<br>");
+                    $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>clear - Clears the terminal<br>inbox - Shows your inbox<br>show - Shows the contents of a file or message<br>");
+                } else {
+                    $out.append(`$&gt; ${val}<br>`);
+                    $out.append("Command not recognized.<br>");
+                }
+                $this.val('');
             }
-            else {
-              $out.append(`$&gt; ${val}<br>`);
-              $out.append("Command not recognized.<br>");
-            }
-            $this.val('');
-        }
-    });
-  </script>
+        });
+    </script>
 
-  </body>
+</body>
+
 </html>
