--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -16,19 +16,15 @@
 
 <body>
 
-    <div id="screen">Welcome to Terminal Mystery.
-        <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>
-        <br>Original idea from Hacker's Quest
-        <br>Type 'help' for a list of commands
+    <div class="element" id="screen">
         <div id="output"></div>
         $&gt;
         <input></input>
     </div>
-<div class="element"></div>
     <script>
   $(function(){
       $(".element").typed({
-        strings: ["First sentence.", "Second sentence."],
+        strings: ["Welcome to Terminal Mystery.<br>A command line mystery game created by <a href='https://github.com/gavwin'>Gavin Wainwright</a><br>Original idea from Hacker's Quest<br>Type 'help' for a list of commands"],
         typeSpeed: 0
       });
   });
