--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -18,13 +18,13 @@
     <div class="type"></div>
     <div id="screen">
         <div id="output"></div>
-        <br><br>$&gt;<input></input>
+        $&gt;<input></input>
     </div>
     <script>
   $(function(){
       $(".type").typed({
         strings: ["Welcome to Terminal Mystery.<br>A command line mystery game created by <a href='https://github.com/gavwin'>Gavin Wainwright</a>.<br>Original idea from Hacker's Quest.<br>Type 'help' for a list of commands."],
-        typeSpeed: 0
+        typeSpeed: 1
       });
   });
 </script>
