--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -15,15 +15,15 @@
 </head>
 
 <body>
-    <div class="type"></div>
     <div id="screen">
         <div id="output"></div>
-        $&gt;<input></input>
+        Welcome to Terminal Mystery.<br>A command line mystery game created by <a href='https://github.com/gavwin'>Gavin Wainwright</a>.<br>Original idea from Hacker's Quest.<br>Type 'help' for a list of commands.
+        <br><br>$&gt;<input></input>
     </div>
     <script>
   $(function(){
       $(".type").typed({
-        strings: ["Welcome to Terminal Mystery.<br>A command line mystery game created by <a href='https://github.com/gavwin'>Gavin Wainwright</a>.<br>Original idea from Hacker's Quest.<br>Type 'help' for a list of commands."],
+        strings: [""],
         typeSpeed: 1
       });
   });
