--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -24,7 +24,7 @@
         $&gt;
         <input></input>
     </div>
-<div class="element"></div>
+<!--<div class="element"></div>
     <script>
   $(function(){
       $(".element").typed({
@@ -32,7 +32,7 @@
         typeSpeed: 0
       });
   });
-</script>
+</script>-->
     
     <script>
         var $out = $("#output");
