--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -17,11 +17,11 @@
 <body>
 
     <div id="screen">Welcome to Terminal Mystery.
-        <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>
-        <br>Original idea from Hacker's Quest
-        <br>Type 'help' for a list of commands
+        <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>.
+        <br>Original idea from Hacker's Quest.
+        <br>Type 'help' for a list of commands.
         <div id="output"></div>
-        gavin@localhost:~$
+        <br>gavin@localhost:~$
         <input></input>
     </div>
 <!--<div class="element"></div>
