--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -87,8 +87,8 @@
                     setTimeout(function() {
                         $out.append(".<br>");
                     }, 5000);
-                    var m4skChanceFinal = m4skChance[Math.floor(Math.random() * m4skChance.length)];
-                    setTimeout(function() { window.location.href = m4skChanceFinal; }, 5100);
+                    //var m4skChanceFinal = m4skChance[Math.floor(Math.random() * m4skChance.length)];
+                    //setTimeout(function() { window.location.href = m4skChanceFinal; }, 5100);
                     } else if(val !== "connect root m4sk" && !cmds.includes(val)) {
                         $out.append(`gavin@localhost:~$ ${val}<br>`);
                         $out.append("Login attempt failed. Incorrect username or password.<br>");   
