--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -55,7 +55,7 @@
                 var $this = $(this),
                     val = $this.val();
                 $this.focus().val('');
-                if (val === "") {
+                if (val === "hi") {
                     $out.append("gavin@localhost:~$<br>");
                 } /*else
                 if (val === "clear") {
