--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="typed.js"></script>
 </head>
 
@@ -44,9 +44,87 @@
             "connect root m4sk",
             "show favor",
             ];
-        var m4skChance [
-            "https://gavwin.github.io/Terminal%Mystery/m4sk.html",
-            "https://gavwin.github.io/Terminal%Mystery/connection_failed.html",
+        var $out = $("#output");
+        $("#screen input").focus();
+        $("#screen input").on('keydown', function(event) {
+            if (event.which === 13) { // Enter key pressed
+                var $this = $(this),
+                    val = $this.val();
+                $this.focus().val('');
+                if (val === "") {
+                    $out.append("gavin@localhost:~$<br>");
+                } else
+                if (val === "clear") {
+                    $out.empty();
+                } else
+                    if (val === "show favor") {
+                    $out.append("gavin@localhost:~$ show favor<br>");
+                    $out.append("Viewing the content of favor:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by connecting with the host:<br>root<br>and the password:<br>m4sk<br>");
+                } else
+                if (val === "inbox") {
+                    $out.append("gavin@localhost:~$ inbox<br>");
+                    $out.append("Your Inbox:<br>↳ favor");
+                } else
+                if (val === "connect root m4sk") {
+                    $out.append("gavin@localhost:~$ connect root m4sk<br>");
+                        $out.append("Connecting");
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 1000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 2000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 3000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 4000);
+                    setTimeout(function() {
+                        $out.append(".<br>");
+                    }, 5000);
+                    setTimeout(function() { window.location.href = "https://gavwin.github.io/Terminal%Mystery/m4sk.html"; }, 5100);
+                    } else if(val !== "connect root m4sk" && !cmds.includes(val)) {
+                        $out.append(`gavin@localhost:~$ ${val}<br>`);
+                        $out.append("Login attempt failed. Incorrect username or password.<br>");   
+                    } else
+                if (val === "breach") {
+                    $out.append("gavin@localhost:~$ breach<br>");
+                    $out.append("Breaching");
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 1000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 2000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 3000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 4000);
+                    setTimeout(function() {
+                        $out.append(".<br>");
+                    }, 5000);
+                    setTimeout(function() {
+                        $out.append("Successfully breached the firewall.<br>");
+                    }, 6250);
+                } else
+                if (val === "help") {
+                    $out.append("gavin@localhost:~$ help<br>");
+                    $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>clear - Clears the terminal<br>inbox - Shows your inbox<br>show - Shows the contents of a file or message<br>");
+                } else {
+                    $out.append(`gavin@localhost:~$ ${val}<br>`);
+                    $out.append("Command not recognized.<br>");
+                }
+                $this.val('');
+            }
+        });
+    </script>
+
+</body>
+
+</html>
             ];
         var $out = $("#output");
         $("#screen input").focus();
