--- a/Terminal Mystery/m4sk.html
+++ b/Terminal Mystery/m4sk.html
@@ -1,1 +1,48 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Terminal Mystery - M.A.S.K.</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="author" content="Gavin Wainwright">
+    <meta name="description" content="description here">
+    <meta name="keywords" content="keywords,here">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="typed.js"></script>
+</head>
+
+<body>
+
+    <div id="screen">Successfully established a connection to root@m4sk
+        <br>Type 'help' for a list of commands.
+        <div id="output"></div>
+        <br>root@m4sk:~$
+        <input></input>
+    </div>
+<!--<div class="element"></div>
+    <script>
+  $(function(){
+      $(".element").typed({
+        strings: ["First sentence.", "Second sentence."],
+        typeSpeed: 0
+      });
+  });
+</script>-->
+    
+    <script>
+        var cmds = [
+            "",
+            "help",
+            "inbox",
+            "show",
+            "clear",
+            "connect root m4sk",
+            "show favor",
+            ];
+        
+        var m4skChance = [
+            "https://gavwin.github.io/Terminal%20Mystery/m4sk.html",
