--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -18,7 +18,7 @@
 
     <div id="screen">Welcome to Terminal Mystery.
         <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>.
-        <br>Original idea from Hacker's Quest.
+        <br>Original idea from <a href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
         <br>Type 'help' for a list of commands.
         <div id="output"></div>
         <br>gavin@localhost:~$
@@ -38,17 +38,19 @@
         var cmds = [
             "",
             "help",
+            "clear",
             "inbox",
             "show",
-            "clear",
+            "show need your help",
+            "connect",
             "connect root m4sk",
-            "show favor",
             ];
         
         var m4skChance = [
             "https://gavwin.github.io/Terminal%20Mystery/m4sk.html",
             "https://gavwin.github.io/Terminal%20Mystery/connection-failed.html",
             ];
+        
         var $out = $("#output");
         $("#screen input").focus();
         $("#screen input").on('keydown', function(event) {
@@ -59,16 +61,28 @@
                 if (val === "") {
                     $out.append("gavin@localhost:~$<br>");
                 } else
+                                    if (val === "help") {
+                    $out.append("gavin@localhost:~$ help<br>");
+                    $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show <file> - Shows the contents of a file or message<br>clear - Clears your terminal<br>");
+                } else
                 if (val === "clear") {
                     $out.empty();
                 } else
-                    if (val === "show favor") {
+                                    if (val === "inbox") {
+                    $out.append("gavin@localhost:~$ inbox<br>");
+                    $out.append("Your Inbox:<br>↳ need your help");
+                } else
+                    if(val.startsWith("show")) {
+                        if(val === "show") {
+                        $out.append("gavin@localhost:~$ show<br>");
+                        $out.append("Specify a file / message to show.<br>");   
+                    } else if(val !== "show" && !cmds.includes(val)) {
+                                                $out.append(`gavin@localhost:~$ ${val}<br>`);
+                        $out.append("Couldn't find a file / message with the name ${val.substring(2)}.<br>");   
+                    }
+                    if (val === "show need your help") {
                     $out.append("gavin@localhost:~$ show favor<br>");
                     $out.append("Viewing the content of favor:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
-                } else
-                if (val === "inbox") {
-                    $out.append("gavin@localhost:~$ inbox<br>");
-                    $out.append("Your Inbox:<br>↳ favor");
                 } else
                 if (val === "connect root m4sk") {
                     $out.append("gavin@localhost:~$ connect root m4sk<br>");
@@ -93,33 +107,7 @@
                     } else if(val !== "connect root m4sk" && !cmds.includes(val)) {
                         $out.append(`gavin@localhost:~$ ${val}<br>`);
                         $out.append("Login attempt failed. Incorrect username or password.<br>");   
-                    } else
-                if (val === "breach") {
-                    $out.append("gavin@localhost:~$ breach<br>");
-                    $out.append("Breaching");
-                    setTimeout(function() {
-                        $out.append(".");
-                    }, 1000);
-                    setTimeout(function() {
-                        $out.append(".");
-                    }, 2000);
-                    setTimeout(function() {
-                        $out.append(".");
-                    }, 3000);
-                    setTimeout(function() {
-                        $out.append(".");
-                    }, 4000);
-                    setTimeout(function() {
-                        $out.append(".<br>");
-                    }, 5000);
-                    setTimeout(function() {
-                        $out.append("Successfully breached the firewall.<br>");
-                    }, 6250);
-                } else
-                if (val === "help") {
-                    $out.append("gavin@localhost:~$ help<br>");
-                    $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>clear - Clears the terminal<br>inbox - Shows your inbox<br>show - Shows the contents of a file or message<br>");
-                } else {
+                    } else {
                     $out.append(`gavin@localhost:~$ ${val}<br>`);
                     $out.append("Command not recognized.<br>");
                 }
