--- a/Terminal Mystery/m4sk.html
+++ b/Terminal Mystery/m4sk.html
@@ -46,3 +46,74 @@
         
         var m4skChance = [
             "https://gavwin.github.io/Terminal%20Mystery/m4sk.html",
+            "https://gavwin.github.io/Terminal%20Mystery/connection-failed.html",
+            ];
+        
+        var $out = $("#output");
+        $("#screen input").focus();
+        $("#screen input").on('keydown', function(event) {
+            if (event.which === 13) { // Enter key pressed
+                var $this = $(this),
+                    val = $this.val();
+                $this.focus().val('');
+                if (val === "") {
+                    $out.append("gavin@localhost:~$<br>");
+                } else
+                                    if (val === "help") {
+                    $out.append("gavin@localhost:~$ help<br>");
+                    $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show <file> - Shows the contents of a file or message<br>clear - Clears your terminal<br>");
+                } else
+                if (val === "clear") {
+                    $out.empty();
+                } else
+                                    if (val === "inbox") {
+                    $out.append("gavin@localhost:~$ inbox<br>");
+                    $out.append("Your Inbox:<br>↳ need your help");
+                } else
+                    if(val.startsWith("show")) {
+                        if(val === "show") {
+                        $out.append("gavin@localhost:~$ show<br>");
+                        $out.append("Specify a file / message to show.<br>");   
+                    } else if(val !== "show" && !cmds.includes(val)) {
+                                                $out.append(`gavin@localhost:~$ ${val}<br>`);
+                        $out.append("Couldn't find a file / message with the name ${val.substring(2)}.<br>");   
+                    }
+                    if (val === "show need your help") {
+                    $out.append("gavin@localhost:~$ show favor<br>");
+                    $out.append("Viewing the content of favor:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
+                } else
+                if (val === "connect root m4sk") {
+                    $out.append("gavin@localhost:~$ connect root m4sk<br>");
+                        $out.append("Connecting");
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 1000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 2000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 3000);
+                    setTimeout(function() {
+                        $out.append(".");
+                    }, 4000);
+                    setTimeout(function() {
+                        $out.append(".<br>");
+                    }, 5000);
+                    var m4skRandom = m4skChance[Math.floor(Math.random()*m4skChance.length)];
+                    setTimeout(function() { window.location.href = m4skRandom}, 5100);
+                    } else if(val !== "connect root m4sk" && !cmds.includes(val)) {
+                        $out.append(`gavin@localhost:~$ ${val}<br>`);
+                        $out.append("Login attempt failed. Incorrect username or password.<br>");   
+                    } else {
+                    $out.append(`gavin@localhost:~$ ${val}<br>`);
+                    $out.append("Command not recognized.<br>");
+                }
+                $this.val('');
+            }
+        });
+    </script>
+
+</body>
+
+</html>
